# crashupload

./: .gitignore  CHANGELOG.md  Cargo.toml  L2_TESTS.md  L2_TODO.md  README.md  TODO.md  coredump-upload.path  coredump-upload.service  cov_build.sh  minidump-on-bootup-upload.service  minidump-on-bootup-upload.timer  rdk_build.sh  rdk_env.xml  runDumpUpload.sh  run_l2.sh  run_ut.sh  uploadDumps.sh  uploadDumpsUtils.sh  uploadDumps_TestCases.md  uploadDumps_TestCases_QuickReference.md
.github/workflows/: L1-Test.yaml  L1-Test.yml  L2-Test.yml  native_full_build.yml  release.yml  release_docs.yaml
c_sourcecode/: IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  uploadDumps.sh
c_sourcecode/UnitTest/: Makefile.am  configure.ac
c_sourcecode/UnitTest/src/: test_archive.cpp  test_file_utils.cpp  test_network_utils.cpp  test_ratelimit.cpp  test_scanner.cpp  test_system_utils.cpp
c_sourcecode/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
c_sourcecode/common/: constants.h  errors.h  types.h
c_sourcecode/include/: archive.h  config.h  file_utils.h  network_utils.h  platform.h  ratelimit.h  scanner.h  system_utils.h  systemutils.h  upload.h
c_sourcecode/src/: Makefile  Makefile.am  Makefile.in  crashupload  main.c
c_sourcecode/src/archive/: archive.c  archive.h  archive_crash.h
c_sourcecode/src/config/: config.c  config_manager.c  config_manager.h
c_sourcecode/src/core/: archive_smart.c  archive_smart.h  ratelimit_unified.c  ratelimit_unified.h  scanner.c  scanner.h  upload_typeaware.c  upload_typeaware.h
c_sourcecode/src/init/: system_init.c  system_init.h
c_sourcecode/src/platform/: platform.c  platform.h
c_sourcecode/src/ratelimit/: ratelimit.c
c_sourcecode/src/rbusInterface/: rbus_interface.c  rbus_interface.h
c_sourcecode/src/rfcInterface/: rfcinterface.c  rfcinterface.h
c_sourcecode/src/scanner/: scanner.c  scanner.h
c_sourcecode/src/t2Interface/: telemetryinterface.c  telemetryinterface.h
c_sourcecode/src/upload/: upload.c
c_sourcecode/src/utils/: cleanup_batch.c  cleanup_batch.h  file_utils.c  lock_manager.c  lock_manager.h  logger.c  logger.h  network_utils.c  prerequisites.c  prerequisites.h  privacy.c  privacy.h  system_utils.c
crash-upload/: Cargo.toml
crash-upload/src/: constants.rs  crashupload_utils.rs  main.rs
crash_upload/: Cargo.toml
crash_upload/src/: constants.rs  crashupload_utils.rs  main.rs  utils.rs
crates/curl-interface/: Cargo.toml
crates/curl-interface/src/: lib.rs
crates/curl_interface/: Cargo.toml
crates/json-parser-interface/: Cargo.toml
crates/json-parser-interface/src/: lib.rs
crates/json_parser_interface/: Cargo.toml
crates/platform-interface/: Cargo.toml
crates/platform-interface/src/: lib.rs  rfc_api.rs  t2_api.rs
crates/platform_interface/: Cargo.toml
crates/platform_interface/src/: lib.rs  rfc_api.rs  t2_api.rs
crates/utils/: Cargo.toml
crates/utils/src/: command.rs  device_info.rs  lib.rs
docs/migration/: README.md  updatedREADME.md
docs/migration/diagrams/flowcharts/: crashupload-binary-architecture.md  crashupload-compiled-code-architecture.md  optimizeduploadDumps-flowcharts.md  uploadDumps-flowcharts.md  uploadDumpsUtils-flowcharts.md
docs/migration/hld/: updateduploadDumps-hld.md  uploadDumps-hld.md  uploadDumpsUtils-hld.md
docs/migration/lld/: updateduploadDumps-lld.md  uploadDumps-lld.md  uploadDumpsUtils-lld.md
docs/migration/requirements/: uploadDumps-requirements.md  uploadDumpsUtils-requirements.md
test/crash-upload-test/: Cargo.toml
test/crash_upload_test/: Cargo.toml
test/curl-interface-test/: Cargo.toml
test/curl_interface_test/: Cargo.toml
test/functional-tests/features/: README.md  archive_content.feature  archive_naming.feature  arg_parsing.feature  broadband_env.feature  cleanup_batch.feature  config_and_path.feature  config_checks_and_baseline.feature  crash_telemetry.feature  dump_processing.feature  failure_return.feature  lock_lifecycle.feature  no_dumps_exit.feature  ratelimit.feature  reboot_and_log_scenario.feature  scanner_behaviour.feature  signal_lock_cleanup.feature  telemetry_optout.feature  test_lock_and_exit.feature  test_lock_and_wait.feature  unsupported_device_types.feature  upload.feature  upload_deferral.feature  upload_retry.feature
test/functional-tests/tests/: README.md  conftest.py  testUtility.py  test_archive_content.py  test_broadband_env.py  test_cleanup_batch.py  test_config_and_path.py  test_config_checks_and_baseline.py  test_coredump_happy_path.py  test_crashupload_arg_parsing.py  test_crashupload_failure_return.py  test_dump_processing.py  test_file_ext_check.py  test_lock_and_exit.py  test_lock_and_wait.py  test_lock_lifecycle.py  test_locking_mechanism.py  test_minidump_happy_path.py  test_no_dumps_exit.py  test_ratelimit.py  test_ratelimit_allow.py  test_reboot_and_log_scenario.py  test_scanner_behaviour.py  test_signal_lock_cleanup.py  test_single_dump_upload.py  test_startup_cleanup.py  test_t2_optout.py  test_telemetry.py  test_unsupported_device_types.py  test_unsupported_devicetypes.py  test_upload_deferral.py  test_upload_retry.py
test/json-parser-interface-test/: Cargo.toml
test/json_parser_interface_test/: Cargo.toml
test/platform-interface-test/: Cargo.toml
test/platform_interface_test/: Cargo.toml
test/utils-test/: Cargo.toml
test/utils-test/src/: main.rs
test/utils_test/: Cargo.toml
test/utils_test/src/: main.rs
unittest/: Makefile.am  README.md  TEST_SUMMARY.md  archive_gmock.cpp  archive_gtest.cpp  build_and_test.sh  config_manager_gtest.cpp  config_manager_mock.cpp  configure.ac  lock_manager_gtest.cpp  logger_gmock.cpp  logger_gtest.cpp  mainapp_extra_gtest.cpp  mainapp_gmock.cpp  mainapp_gtest.cpp  mainapp_test_fixture.h  platform_gmock.cpp  platform_gtest.cpp  prerequisites_gmock.cpp  prerequisites_gtest.cpp  ratelimit_gmock.cpp  ratelimit_gtest.cpp  scanner_gmock.cpp  scanner_gtest.cpp  upload_gmock.cpp  upload_gtest.cpp  utils_gmock.cpp  utils_gtest.cpp
(+3 files in other folders)
