[workspace]
members = [
    "crash-upload",
    "crates/curl-interface",
    "crates/json-parser-interface",
    "crates/platform-interface",
    "crates/utils",
    "test/crash-upload-test",
    "test/curl-interface-test",
    "test/json-parser-interface-test",
    "test/platform-interface-test",
    "test/utils-test",
]

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"