[package]
name = "crash-upload"
version = "0.1.0"
edition = "2021"
description = "Crash dump uploader"
repository = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crash-upload"
homepage = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crash-upload"

[dependencies]
# Internal crates
curl-interface = { path = "../crates/curl-interface" }
json_parser-interface = { path = "../crates/json-parser-interface" }
platform-interface = { path = "../crates/platform-interface" }
utils = { path = "../crates/utils" }
chrono = "0.4"
