[package]
name = "crash-upload"
version = "0.1.0"
edition = "2021"
description = "Crash dump uploader"
repository = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crash-upload"
homepage = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crash-upload"

[dependencies]
# Internal crates
curl-interface = { path = "../crates/curl-interface" }
json-parser-interface = { path = "../crates/json-parser-interface" }
platform-interface = { path = "../crates/platform-interface" }
utils = { path = "../crates/utils" }
chrono = "0.4"
#crash-upload-cpc = { path = "../../../cpg-utils-cpc/crash-upload-cpc", optional = true }

#[features]
#default = []
#shared_api = ["crash-upload-cpc/shared_api"]
