[package]
name = "crash_upload"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal crates
curl_interface = { path = "../crates/curl_interface" }
json_parser_interface = { path = "../crates/json_parser_interface" }
platform_interface = { path = "../crates/platform_interface" }
utils = { path = "../crates/utils" }
chrono = "0.4"
