[package]
name = "curl-interface"
version = "0.1.0"
edition = "2021"
description = "Curl interface"
repository = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crates/curl-interface"
homepage = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crates/curl-interface"

[dependencies]
# Uncomment to Link this library dynamically
#crate_type = ["dynlib"]
