[package]
name = "platform-interface"
version = "0.1.0"
edition = "2021"
description = "Platform abstraction interface"
repository = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crates/platform-interface"
homepage = "https://github.com/rdkcentral/crashupload/tree/feature-sample-rust/crates/platform-interface"

[dependencies]
# Uncomment to Link this library dynamically
#crate_type = ["dynlib"]